--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.12"
+streamlit = "^1.37.1"
+pandas = "^2.2.2"
+sqlalchemy = "^2.0.32"
+psycopg2-binary = "^2.9.9"
+plotly = "^5.23.0"
+python-dotenv = "^1.0.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
